--- a/contest/css/style.css
+++ b/contest/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: "Open Sans";
     font-size: 16px;
     line-height: 1.5;
+    background-color: #000;
 }
 img {
     max-width: 100%;
